--- a/menu.html
+++ b/menu.html
@@ -12,16 +12,16 @@
     <link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap" rel="stylesheet">
-<script type="module" crossorigin src="/assets/menu.48382c68.js"></script>
-  <link rel="modulepreload" href="/assets/main.2285f26f.js">
-  <link rel="modulepreload" href="/assets/vendor.022bbab7.js">
-  <link rel="stylesheet" href="/assets/main.802ba97a.css">
+<script type="module" crossorigin src="/pizza-veranda-build/assets/menu.48382c68.js"></script>
+  <link rel="modulepreload" href="/pizza-veranda-build/assets/main.2285f26f.js">
+  <link rel="modulepreload" href="/pizza-veranda-build/assets/vendor.022bbab7.js">
+  <link rel="stylesheet" href="/pizza-veranda-build/assets/main.6ca92137.css">
 </head>
 <body>
 
     <header class="main-nav-wrap">
         <nav class="container main-nav">
-            <a href="index.html" class="main-nav__logo"><div class="logo-wrapper"><img src="/assets/logo.6ecac107.gif" alt="logo"></div></a>
+            <a href="index.html" class="main-nav__logo"><div class="logo-wrapper"><img src="/pizza-veranda-build/assets/logo.6ecac107.gif" alt="logo"></div></a>
             <button class="main-nav__burger">menu</button>
             <ul class="main-nav__items nav-items">
                 <li class="nav-items__item"><a href="#about" class="nav__link">O nás</a></li>
@@ -1432,11 +1432,11 @@
             <div class="splide__track">
                 <ul class="splide__list">
                     <li class="splide__slide">
-                        <img src="/assets/showimage (1).4d17681d.jpg" alt=""></li>
-                    <li class="splide__slide"><img src="/assets/showimage (2).2bf40a91.jpg" alt=""></li>
-                    <li class="splide__slide"><img src="/assets/showimage (3).9b392dbb.jpg" alt=""></li>
-                    <li class="splide__slide"><img src="/assets/showimage (4).9872dbc7.jpg" alt=""></li>
-                    <li class="splide__slide"><img src="/assets/showimage.02d95497.jpg" alt=""></li>
+                        <img src="/pizza-veranda-build/assets/showimage (1).4d17681d.jpg" alt=""></li>
+                    <li class="splide__slide"><img src="/pizza-veranda-build/assets/showimage (2).2bf40a91.jpg" alt=""></li>
+                    <li class="splide__slide"><img src="/pizza-veranda-build/assets/showimage (3).9b392dbb.jpg" alt=""></li>
+                    <li class="splide__slide"><img src="/pizza-veranda-build/assets/showimage (4).9872dbc7.jpg" alt=""></li>
+                    <li class="splide__slide"><img src="/pizza-veranda-build/assets/showimage.02d95497.jpg" alt=""></li>
                 </ul>
             </div>
         </div>
@@ -1449,13 +1449,13 @@
                 <p>ROZVOZ BOLT FOOD 11.30-21.30</p>
             </div>
             <div>
-                <a href="https://www.facebook.com/Veranda-pizzeria-ristorante-bar-poctiv%C3%A1-italsk%C3%A1-kuchyn%C4%9B-188352171185677/" class="icon-social"><img src="/assets/facebook.375d2834.svg" alt="facebook logo"></a>
+                <a href="https://www.facebook.com/Veranda-pizzeria-ristorante-bar-poctiv%C3%A1-italsk%C3%A1-kuchyn%C4%9B-188352171185677/" class="icon-social"><img src="/pizza-veranda-build/assets/facebook.375d2834.svg" alt="facebook logo"></a>
             </div>
             <div>
-                <address><a href="https://www.google.com/maps/place/Pizzerie+Veranda/@50.06713,14.496127,16z/data=!4m5!3m4!1s0x0:0x2a0b3ca9d23a2115!8m2!3d50.0671277!4d14.4961262?hl=cs" class="footer-contact--link"><img src="/assets/address.2c9297b8.svg" alt="adresa" class="icon">Praha 10, Průběžná 57</a></address>
+                <address><a href="https://www.google.com/maps/place/Pizzerie+Veranda/@50.06713,14.496127,16z/data=!4m5!3m4!1s0x0:0x2a0b3ca9d23a2115!8m2!3d50.0671277!4d14.4961262?hl=cs" class="footer-contact--link"><img src="/pizza-veranda-build/assets/address.2c9297b8.svg" alt="adresa" class="icon">Praha 10, Průběžná 57</a></address>
                 <ul class="footer-contact">
-                    <li><a href="tel:+420 274 775 522" class="footer-contact--link"><img src="/assets/phone.c0ef912f.svg" alt="telefon" class="icon">274 775 522</a></li>
-                    <li><a href="mailto:info@pizza-veranda.cz" class="footer-contact--link"><img src="/assets/mail.0ab26af8.svg" alt="mail" class="icon">e-mail: info@pizza-veranda.cz</a></li>
+                    <li><a href="tel:+420 274 775 522" class="footer-contact--link"><img src="/pizza-veranda-build/assets/phone.c0ef912f.svg" alt="telefon" class="icon">274 775 522</a></li>
+                    <li><a href="mailto:info@pizza-veranda.cz" class="footer-contact--link"><img src="/pizza-veranda-build/assets/mail.0ab26af8.svg" alt="mail" class="icon">e-mail: info@pizza-veranda.cz</a></li>
                 </ul>
             </div>
         </div>
